# margin

./: .gitignore  README.md  index.html  package.json
src/: ActivityPanel.tsx  App.css  App.tsx  AssigneeChip.tsx  AttendeePicker.tsx  Changelog.tsx  ChatMessage.tsx  ChatPage.tsx  ChatProvider.tsx  Editor.tsx  Home.tsx  LevelMeter.tsx  Meeting.tsx  MoreMenu.tsx  NoteActionsSidebar.tsx  NoteHeader.tsx  NotificationsPanel.tsx  Preview.tsx  PromptInspector.tsx  RecordingBanner.tsx  ResolveQuestionPopover.tsx  RestrictedBanner.tsx  SearchPalette.tsx  Settings.tsx  Team.tsx  Todos.tsx  Transcript.tsx  WorkstreamChip.tsx  Workstreams.tsx  dueLabel.ts  file.ts  icons.tsx  initials.ts  main.tsx  markdown.ts  notifications.ts  pageDetail.ts  settingsStore.ts  themes.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: action_deletions.rs  actions_migration.rs  activity.rs  anthropic.rs  ask.rs  audio.rs  chat.rs  chunker.rs  dates.rs  diarize.rs  events.rs  home.rs  index.rs  keychain.rs  lib.rs  main.rs  notes.rs  paths.rs  reconcile.rs  reconcile_rejected.rs  reminders.rs  sharing.rs  summarize.rs  sysaudio.rs  team.rs  todos.rs  transcribe.rs  voice.rs
src-tauri/src/connectors/: calendar.rs  commands.rs  email.rs  github.rs  github_contributions.rs  google.rs  microsoft_graph.rs  mod.rs  oauth.rs  providers.rs  registry.rs  runner.rs  teams.rs
src-tauri/src/edges/: commands.rs  mod.rs  synthesizer.rs
src-tauri/src/embeddings/: commands.rs  mod.rs  retrieve.rs  sources.rs  voyage.rs  worker.rs
src-tauri/src/migrations/: 001_init.sql  002_archived.sql  003_favorite.sql  004_actions.sql  005_due_dates.sql  006_team_members.sql  007_action_owners.sql  008_connectors.sql  009_calendar.sql  010_event_note_link.sql  011_email.sql  012_workstreams.sql  013_workstream_user_notes.sql  014_workstream_archive_resurface.sql  015_workstream_owner.sql  016_workstream_signals.sql  017_typed_aliases.sql  018_workstream_links.sql  019_workstream_parent.sql  020_workstream_link_summary.sql  021_workstream_action_assignee.sql  022_events_edges.sql  023_embeddings.sql  024_teams.sql  025_unify_actions.sql  026_notes_to_db.sql  027_open_questions.sql  028_profile_snapshots.sql  029_profile_observations.sql  030_action_waiting.sql  031_auto_resolve_hysteresis.sql  032_drop_profile_md_path.sql  033_calendar_series_master_id.sql  034_workstream_signal_tombstone.sql  035_chat_conversations.sql  036_prompt_dumps.sql  037_prompt_dumps_telemetry.sql  038_prompt_cache_tokens.sql  039_reconcile_origin.sql  040_actions_migration_flag.sql  (+6 more)
src-tauri/src/observations/: commands.rs  mod.rs  persist.rs
src-tauri/src/profiles/: commands.rs  mod.rs  persist.rs  prompt.rs  signals.rs  worker.rs
src-tauri/src/workstreams/: commands.rs  link_categorizer.rs  link_summarizer.rs  mod.rs  persist.rs  rejected.rs  signals.rs  synthesizer.rs
src/editor/: actionHash.ts  applyDiff.ts  assigneeChip.ts  assigneePopover.tsx  dueDateChip.ts  dueDatePopover.tsx  parseActionLine.ts
