[package]
name = "margin"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "margin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
notify-debouncer-full = "0.7"
dirs = "5"
keyring = { version = "3", features = ["apple-native"] }
cpal = "0.17"
hound = "3.5"
crossbeam-channel = "0.5"
futures-util = "0.3"
rubato = { version = "0.16", default-features = false }
whisper-rs = { version = "0.16", default-features = false, features = ["metal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["fs", "io-util"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
screencapturekit = { version = "1.5", features = ["macos_14_0"] }
sherpa-onnx = "1.13"

